refactor: CORS origin 제한 및 로거 어노테이션 통일